# tfg-riego-inteligente

./: .gitignore  README.md  modelo_sql.html  package-lock.json
agent/: .env  main.py  requirements
agent/utils/: actuadores.py  areas.py  database.py  mqtt.py  token.py  token_management.py  weather.py
backend/: .env  index.js  mqtt.js  mqttWorker.js  package-lock.json  package.json
backend/actuadores/controllers/: actuadoresController.js
backend/actuadores/models/: actuadoresModel.js
backend/actuadores/routes/: actuadoresRoutes.js
backend/areas/controllers/: areasController.js
backend/areas/models/: areasModel.js
backend/areas/routes/: areasRoutes.js
backend/coordenadas/controllers/: coordsController.js
backend/coordenadas/models/: coordsModel.js
backend/coordenadas/routes/: coordsRoute.js
backend/crops/models/: cropModel.js
backend/database/: db.js
database/: modelo_er.mwb  modelo_er.mwb.bak  modelo_er.sql
docker/: agente-compose.yml  api-compose.yml  frontend-compose.yml  grafana-compose.yml
esp32/: esp32-config.dmp
frontend/: .env  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
raspberry/: Cargo.toml  broker.config  config.json  device-controld.service  run.sh  setup.sh
raspberry/scripts/: get_temperature.sh
raspberry/src/: main.rs
raspberry/src/device/: actuadores.rs  info.rs  mod.rs  sensors.rs  temperature.rs
raspberry/src/sends/: temperature.rs
raspberry/src/utils/: config.rs  mod.rs  mqtt_client.rs  net.rs  programs.rs  time.rs  token.rs  topics.rs
(+23503 files in other folders)
