[package]
name = "raspberry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.114"
rppal = "0.17.1"
paho-mqtt = "0.12"
rand = "0.8.5"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
